--- a/Infotainment/infotainmentresources.qrc
+++ b/Infotainment/infotainmentresources.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>images/xc60dash.jpg</file>
+        <file>images/xc60seats.jpg</file>
+        <file>images/xc90seats.jpg</file>
     </qresource>
 </RCC>
