--- a/Infotainment/navigationdialog.ui
+++ b/Infotainment/navigationdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>939</width>
-    <height>422</height>
+    <width>640</width>
+    <height>360</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,9 +16,9 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>570</x>
-     <y>370</y>
-     <width>341</width>
+     <x>430</x>
+     <y>300</y>
+     <width>181</width>
      <height>32</height>
     </rect>
    </property>
@@ -32,10 +32,10 @@
   <widget class="QWebView" name="webViewNavigation">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>20</y>
-     <width>921</width>
-     <height>341</height>
+     <x>0</x>
+     <y>0</y>
+     <width>640</width>
+     <height>360</height>
     </rect>
    </property>
    <property name="url">
@@ -44,6 +44,8 @@
     </url>
    </property>
   </widget>
+  <zorder>webViewNavigation</zorder>
+  <zorder>buttonBox</zorder>
  </widget>
  <customwidgets>
   <customwidget>
