--- a/Infotainment/carsettingsdialog.ui
+++ b/Infotainment/carsettingsdialog.ui
@@ -44,6 +44,9 @@
    <property name="maximum">
     <number>3</number>
    </property>
+   <property name="pageStep">
+    <number>1</number>
+   </property>
    <property name="tracking">
     <bool>false</bool>
    </property>
@@ -102,6 +105,15 @@
      <height>29</height>
     </rect>
    </property>
+   <property name="minimum">
+    <number>1</number>
+   </property>
+   <property name="maximum">
+    <number>3</number>
+   </property>
+   <property name="pageStep">
+    <number>1</number>
+   </property>
    <property name="orientation">
     <enum>Qt::Horizontal</enum>
    </property>
@@ -115,6 +127,15 @@
      <height>29</height>
     </rect>
    </property>
+   <property name="minimum">
+    <number>1</number>
+   </property>
+   <property name="maximum">
+    <number>3</number>
+   </property>
+   <property name="pageStep">
+    <number>1</number>
+   </property>
    <property name="orientation">
     <enum>Qt::Horizontal</enum>
    </property>
@@ -127,6 +148,15 @@
      <width>211</width>
      <height>29</height>
     </rect>
+   </property>
+   <property name="minimum">
+    <number>1</number>
+   </property>
+   <property name="maximum">
+    <number>3</number>
+   </property>
+   <property name="pageStep">
+    <number>1</number>
    </property>
    <property name="orientation">
     <enum>Qt::Horizontal</enum>
